# xml_to_arrow_table

./: .gitignore  CMakeLists.txt  README.md  build.sh  exampleTable  json.h  jsonToTable  logFile.json  main.cpp  problem.md  sampleTable.h  vcpkg.json
resources/: input.json
utils/: logging.h
